--- a/app/assets/stylesheets/components/_review.scss
+++ b/app/assets/stylesheets/components/_review.scss
@@ -9,6 +9,8 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  z-index: 100;
+
 }
 
 /* Modal Content/Box */
@@ -21,6 +23,7 @@
   width: 40%;
   border-radius: 5px;
   height: 420px;
+  z-index: 100;
   p {
     font-size: 18px;
   }
