--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -40,7 +40,7 @@
         left:0;
         padding: 0;
         width: 130px;
-        background-color: rgb(151, 4, 4);
+        background-color: #e63946;
         border-radius: 0 50px 50px 0;
         p{
           color: white;
@@ -126,7 +126,7 @@
         left:0;
         padding: 0;
         width: 130px;
-        background-color: rgb(151, 4, 4);
+        background-color: #e63946;
         border-radius: 0 50px 50px 0;
         p{
           color: white;
@@ -221,7 +221,7 @@
         left:0;
         padding: 0;
         width: 130px;
-        background-color: rgb(151, 4, 4);
+        background-color: #e63946;
         border-radius: 0 50px 50px 0;
         p{
           color: white;
@@ -306,7 +306,7 @@
         left:0;
         padding: 0;
         width: 130px;
-        background-color: rgb(151, 4, 4);
+        background-color: #e63946;
         border-radius: 0 50px 50px 0;
         p{
           color: white;
