--- a/app/views/loans/borrowers.html.erb
+++ b/app/views/loans/borrowers.html.erb
@@ -1,6 +1,3 @@
-<% loans = Loan.all %>
-<% loans.each do |loan| %>
-  <% loan.user.reviews.each do |review| %>
-    <% review %>
-  <% end %>
-<% end %>
+
+
+<%= current_user.reviews %>
