--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -148,6 +148,7 @@
   padding: 8px 15px;
   background-color: rgba($color: white, $alpha: 0.8);
   border: 1px solid rgba(0, 0, 0, 0.7);
+  margin-bottom: 15px;
   p {
     font-size: 10px;
   }
