--- a/app/views/shared/_introduction.html.erb
+++ b/app/views/shared/_introduction.html.erb
@@ -2,7 +2,7 @@
   <div class="introduction-step-1">
     <div class="odd-number"><h1>01.</h1></div>
     <div class="odd-text">
-      <p>You're the borrowing type? Great, you'll remember who've you borrowed from by clicking on the 'Borrow' button. More of a lender? Easy peasy, just click 'Lend an item'</p>
+      <p>You are re the borrowing type? Great, you'll remember who you have borrowed from by clicking on the 'Borrow' button. More of a lender? Easy peasy, just click 'Lend an item'</p>
     </div>
   </div>
   <div class="introduction-step-2">
@@ -14,7 +14,7 @@
   <div class="introduction-step-3">
     <div class="odd-number"><h1>03.</h1></div>
     <div class="odd-text">
-      <p>You've returned what you borrowed? Wait for your kind lender to confirm by sending him a quick ping. And voilà !</p>
+      <p>You have returned what you borrowed? Wait for your kind lender to confirm by sending him a quick ping. And voilà !</p>
     </div>
   </div>
 </div>
