--- a/app/views/shared/_introduction.html.erb
+++ b/app/views/shared/_introduction.html.erb
@@ -2,13 +2,13 @@
   <div class="introduction-step-1">
     <div class="odd-number"><h1>01.</h1></div>
     <div class="odd-text">
-      <p>You are re the borrowing type? Great, you'll remember who you have borrowed from by clicking on the 'Borrow' button. More of a lender? Easy peasy, just click 'Lend an item'</p>
+      <p>You are the borrowing type? Great, you'll remember who you have borrowed from by clicking on the 'Borrow' button. More of a lender? Easy peasy, just click 'Lend an item'</p>
     </div>
   </div>
   <div class="introduction-step-2">
     <div class="even-number"><h1>02.</h1></div>
     <div class="even-text">
-      <p>Let us know who you're borrowing from or lending to and in a few clicks, your item will be displayed on your main page</p>
+      <p>Let us know who you are borrowing from or lending to and in a few clicks, your item will be displayed on your main page</p>
     </div>
   </div>
   <div class="introduction-step-3">
