--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -1,11 +1,12 @@
 .loan-index{
   display: flex;
-  justify-content: center!important;
+  justify-content: center;
   align-items: center;
   gap: 20px;
   width: 100%;
   height: 100%;
   margin: 20px 20px 20px;
+  flex-wrap: wrap;
 
   .card-odd-lending{
     display: block;
