--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="home-container d-flex justify-content-center flex-wrap">
+<div class="home-container">
   <div class="lend-container d-flex justify-content-center flex-column align-items-center flex-wrap">
     <h1>Good </h1>
     <%= link_to "Borrow an item", loans_borrow_path, class:'borrow-btns' %>
