--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -40,6 +40,7 @@
             <div class="dropdown-menu dropdown-menu-end bg-secondary bg-gradient rounded-4 p-2" aria-labelledby="navbarDropdown">
               <a href="/#map" class="dropdown-item navbar-tx" data-modal-target="link">Map</a>
               <a href="/#friends" class="dropdown-item navbar-tx" data-modal-target="link">Friends</a>
+              <%= link_to 'Edit Profile', edit_user_registration_path, class:"dropdown-item navbar-tx" %>
               <%= link_to 'Log Out', destroy_user_session_path, :method => :delete, class:"dropdown-item navbar-tx" %>
             </div>
           </li>
