added media query for width 450px

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,3 +4,11 @@
   margin: 80px auto;
   text-align: left;
 }
+
+@media only screen and (max-width: 450px) {
+  .form-container {
+    width: 100%;
+    margin: 0px;
+    text-align: center;
+  }
+}
