--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,7 +14,7 @@ html {
     background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)),
     url("https://res.cloudinary.com/benstvit/image/upload/v1646137520/background_goodterms_jpmg8n.jpg");
     background-size: contain;
-    // object-fit: cover;
+    padding: 50px 10px 20px 10px;
     height: 100%;
     width: 100%;
   }
@@ -46,7 +46,7 @@ html {
         text-align: center;
       }
       .odd-text{
-        font-size: 10px;
+        font-size: 12px;
         color: white;
         margin: 0 10px;
       }
@@ -61,7 +61,7 @@ html {
       text-align: center;
     }
     .even-text{
-      font-size: 10px;
+      font-size: 12px;
       color: white;
       text-justify: auto;
       margin: 0 10px;
@@ -77,7 +77,7 @@ html {
       text-align: center;
     }
     .odd-text{
-      font-size: 10px;
+      font-size: 12px;
       color: white;
       text-justify: auto;
       margin: 0 10px;
