--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,12 @@
     align-items: center;
     flex-wrap: nowrap;
   }
+  .navbar-txt {
+    color: rgba($color: #000000, $alpha: 1)!important;
+    font-weight: bolder;
+    padding: 10px;
+  }
+
 }
 
 .navbar-lewagon {
@@ -52,6 +58,7 @@
 .navbar-txt:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
 }
+
 
 .active {
   text-decoration: overline;
